Added login action

--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,13 @@
   </head>
   <body style="width: 600px;">
     <h3>WhatChangedCSS Auth</h3>
-    Username:
-    <input type="text" value="username" id="username" required><br>
-    Password:
-    <input type="text" name="password" id="password" required>
-    <button id="submit">Login</button>
-
+    <div id="NotLoggedIn">
+        Username:
+        <input type="text" name="username" id="username" required><br>
+        Password:
+        <input type="text" name="password" id="password" required>
+        <button id="submit">Login</button>
+    </div>
+    
   </body>
 </html>
