--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
-        <script src="jquery.min.js"></script>
-        <script src="popup.js"></script>
-
+    <link rel="stylesheet" href="button.css" />
+    <link rel="stylesheet" href="popup.css" />
+    <script src="jquery.min.js"></script>
+    <script src="popup.js"></script>
   </head>
-  <body style="width: 600px;">
+  <body style="width: 300px">
     <h3>WhatChangedCSS Auth</h3>
-    <div id="NotLoggedIn">
-        Username:
-        <input type="text" name="username" id="username" required><br>
-        Password:
-        <input type="text" name="password" id="password" required>
-        <button id="submit">Login</button>
+    <div class="main" id="NotLoggedIn">
+      Username:
+      <input type="text" name="username" id="username" required /><br />
+      Password:
+      <input type="text" name="password" id="password" required />
+      <button id="submit">Login</button>
     </div>
-    
   </body>
 </html>
