added signup screen & forgot password screen

--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,13 @@
       Username:
       <input type="text" name="username" id="username" required /><br />
       Password:
-      <input type="text" name="password" id="password" required />
+      <input type="password" name="password" id="password" required />
+      <a href="/forgotpasword.html" class="forgotpasslink">Forgot password?</a>
       <button id="submit">Login</button>
+      <div>
+        New to WhatChangedCSS?
+        <a class="joinlink" href="/Register.html">Register</a>
+      </div>
     </div>
   </body>
 </html>
