--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="button.css" />
     <link rel="stylesheet" href="popup.css" />
     <script src="jquery.min.js"></script>
-    <script src="popup.js"></script>
+    <script src="functions.js"></script>
+    <script src="actions.js"></script>
   </head>
   <body style="width: 300px">
     <h3>WhatChangedCSS Auth</h3>
