Added Redirection of User to dashboard after login - Added automatic redirection if user is logged in already

--- a/popup.html
+++ b/popup.html
@@ -14,11 +14,17 @@
       <input type="text" name="username" id="username" required /><br />
       Password:
       <input type="password" name="password" id="password" required />
-      <a href="/forgotpasword.html" class="forgotpasslink">Forgot password?</a>
+        <!-- <a href="/forgotpasword.html" class="forgotpasslink">Forgot password?</a> -->
       <button id="submit">Login</button>
-      <div>
+     <!-- <div style="">
         New to WhatChangedCSS?
         <a class="joinlink" href="/Register.html">Register</a>
+      </div>-->
+    </div>
+    <div class="main" id="LoggedIn">
+      <h2>Welcome Back, <span id="LoggedInUsername">...</span></h2>
+      <hr>
+      <h4>Your Avaialble Actions:</h4>
       </div>
     </div>
   </body>
